# snap-arch

./: .gitignore  README.md  build.sh  config.sample.toml  pyproject.toml
snap_arch/: arch.py  main.py  snap.py
