[tool.poetry]
name = "snap-arch"
version = "0.1.0"
description = ""
authors = ["concentricspheres <107502292+concentricspheres@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "snap_arch"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
croniter = "^3.0.3"
toml = "^0.10.2"
watchdog = "^5.0.0"
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snap-arch = 'snap_arch.main:run'
